--- a/src/app/features/presentation/category/category-updates/category-updates.component.html
+++ b/src/app/features/presentation/category/category-updates/category-updates.component.html
@@ -12,13 +12,7 @@
     <div class="col">
       <div class="card shadow">
         <div class="card-header border-0">
-          <a
-            [routerLink]="['/product-update']"
-            class="btn btn-primary btn-lg active justify-content-end"
-            role="button"
-            aria-pressed="true"
-            >Add Category</a
-          >
+
         </div>
         <div class="container">
           <form>
@@ -44,8 +38,11 @@
                 </div>
               </div>
             </div>
-
-
+            <div class="d-flex justify-content-end">
+              <button type="button" class="btn btn-warning">Cancel</button>
+              <button type="button" class="btn btn-success">Save</button>
+            </div>
+            &nbsp;
           </form>
         </div>
         <div class="card-footer py-4">
