--- a/src/app/features/presentation/clients/clients-updates/clients-updates.component.html
+++ b/src/app/features/presentation/clients/clients-updates/clients-updates.component.html
@@ -11,26 +11,43 @@
   <div class="row">
     <div class="col">
       <div class="card shadow">
-        <div class="card-header border-0">
-          <a
-            [routerLink]="['/product-update']"
-            class="btn btn-primary btn-lg active justify-content-end"
-            role="button"
-            aria-pressed="true"
-            >Add Clients</a
-          >
-        </div>
+        <div class="card-header border-0"></div>
         <div class="container">
-          <form>
+          <form
+            name="editForm"
+            role="form"
+            novalidate
+            (ngSubmit)="save()"
+            [formGroup]="editForm"
+          >
             <div class="row">
               <div class="col-md-6">
+
                 <div class="form-group">
                   <input
                     type="text"
                     class="form-control form-control-alternative"
-                    id="name"
-                    placeholder="name"
+                    type="text"
+                    name="name"
+                    id="field_name"
+                    data-cy="name"
+                    formControlName="name"
+                    placeholder="Name"
                   />
+                  <div
+                    *ngIf="
+                      editForm.get('name')!.invalid &&
+                      (editForm.get('name')!.dirty ||
+                        editForm.get('name')!.touched)
+                    "
+                  >
+                    <small
+                      class="form-text text-danger"
+                      *ngIf="editForm.get('name')?.errors?.required"
+                    >
+                      This field is required.
+                    </small>
+                  </div>
                 </div>
               </div>
               <div class="col-md-6">
@@ -38,9 +55,28 @@
                   <input
                     type="text"
                     class="form-control form-control-alternative"
+                    type="text"
+                    name="address"
                     id="address"
-                    placeholder="Address"
+                    data-cy="address"
+                    formControlName="address"
+                    placeholder="address"
+                    required
                   />
+                  <div
+                    *ngIf="
+                      editForm.get('address')!.invalid &&
+                      (editForm.get('address')!.dirty ||
+                        editForm.get('address')!.touched)
+                    "
+                  >
+                    <small
+                      class="form-text text-danger"
+                      *ngIf="editForm.get('address')?.errors?.required"
+                    >
+                      This field is required.
+                    </small>
+                  </div>
                 </div>
               </div>
             </div>
@@ -50,24 +86,132 @@
                   <input
                     type="text"
                     class="form-control form-control-alternative"
+                    type="text"
+                    name="url"
                     id="url"
+                    data-cy="url"
+                    formControlName="url"
                     placeholder="url"
+                    required
                   />
+                  <div
+                    *ngIf="
+                      editForm.get('url')!.invalid &&
+                      (editForm.get('url')!.dirty ||
+                        editForm.get('url')!.touched)
+                    "
+                  >
+                    <small
+                      class="form-text text-danger"
+                      *ngIf="editForm.get('url')?.errors?.required"
+                    >
+                      This field is required.
+                    </small>
+                  </div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
+                  <label class="form-control-label" for="field_images"
+                    >Images</label
+                  >
+                  <div>
+                    <img
+                      [src]="
+                        'data:' +
+                        editForm.get('imagesContentType')!.value +
+                        ';base64,' +
+                        editForm.get('images')!.value
+                      "
+                      style="max-height: 100px"
+                      *ngIf="editForm.get('images')!.value"
+                      alt="post image"
+                    />
+                    <div
+                      *ngIf="editForm.get('images')!.value"
+                      class="form-text text-danger clearfix"
+                    >
+                      <span class="pull-left"
+                        >{{ editForm.get("imagesContentType")!.value }},
+                        {{ byteSize(editForm.get("images")!.value) }}</span
+                      >
+                      &nbsp;
+                      <img
+                        src="/assets/img/icons/close.svg"
+                        class="social-media-icon"
+                        alt=""
+                        (click)="
+                          clearInputImage(
+                            'images',
+                            'imagesContentType',
+                            'file_images'
+                          )
+                        "
+                      />
+                    </div>
+                    <input
+                      type="file"
+                      id="file_images"
+                      data-cy="images"
+                      (change)="setFileData($event, 'images', true)"
+                      accept="image/*"
+                    />
+                  </div>
                   <input
-                    class="form-control form-control-alternative"
-                    type="file"
-                    id="formFileMultiple"
-                    multiple
+                    type="hidden"
+                    class="form-control"
+                    name="images"
+                    id="field_images"
+                    data-cy="images"
+                    formControlName="images"
                   />
+                  <input
+                    type="hidden"
+                    class="form-control"
+                    name="imagesContentType"
+                    id="field_imagesContentType"
+                    formControlName="imagesContentType"
+                  />
+                  <div
+                    *ngIf="
+                      editForm.get('images')!.invalid &&
+                      (editForm.get('images')!.dirty ||
+                        editForm.get('images')!.touched)
+                    "
+                  >
+                    <small
+                      class="form-text text-danger"
+                      *ngIf="editForm.get('images')?.errors?.required"
+                    >
+                      This field is required.
+                    </small>
+                  </div>
                 </div>
               </div>
+            </div>
+            <div>
+              <button
+                type="button"
+                id="cancel-save"
+                class="btn btn-secondary"
+                (click)="previousState()"
+              >
+                Cancel
+              </button>
+              &nbsp;
+              <button
+                type="submit"
+                id="save-entity"
+                data-cy="entityCreateSaveButton"
+                class="btn btn-primary ml-3"
+              >
+                Save
+              </button>
             </div>
           </form>
         </div>
+
+        <!-- Footer -->
         <div class="card-footer py-4">
           <nav aria-label="...">
             <ul class="pagination justify-content-end mb-0">
