--- a/src/app/features/presentation/feedback/feedback.component.html
+++ b/src/app/features/presentation/feedback/feedback.component.html
@@ -8,17 +8,29 @@
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Traffic</h5>
+                  <h5 class="card-title text-uppercase text-muted mb-0">
+                    Traffic
+                  </h5>
                   <span class="h2 font-weight-bold mb-0">350,897</span>
                 </div>
                 <div class="col-auto">
-                  <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                  <div
+                    class="
+                      icon icon-shape
+                      bg-danger
+                      text-white
+                      rounded-circle
+                      shadow
+                    "
+                  >
                     <i class="fas fa-chart-bar"></i>
                   </div>
                 </div>
               </div>
               <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
+                <span class="text-success mr-2"
+                  ><i class="fa fa-arrow-up"></i> 3.48%</span
+                >
                 <span class="text-nowrap">Since last month</span>
               </p>
             </div>
@@ -29,17 +41,29 @@
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">New users</h5>
+                  <h5 class="card-title text-uppercase text-muted mb-0">
+                    New users
+                  </h5>
                   <span class="h2 font-weight-bold mb-0">2,356</span>
                 </div>
                 <div class="col-auto">
-                  <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
+                  <div
+                    class="
+                      icon icon-shape
+                      bg-warning
+                      text-white
+                      rounded-circle
+                      shadow
+                    "
+                  >
                     <i class="fas fa-chart-pie"></i>
                   </div>
                 </div>
               </div>
               <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-danger mr-2"><i class="fas fa-arrow-down"></i> 3.48%</span>
+                <span class="text-danger mr-2"
+                  ><i class="fas fa-arrow-down"></i> 3.48%</span
+                >
                 <span class="text-nowrap">Since last week</span>
               </p>
             </div>
@@ -50,17 +74,29 @@
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Sales</h5>
+                  <h5 class="card-title text-uppercase text-muted mb-0">
+                    Sales
+                  </h5>
                   <span class="h2 font-weight-bold mb-0">924</span>
                 </div>
                 <div class="col-auto">
-                  <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
+                  <div
+                    class="
+                      icon icon-shape
+                      bg-yellow
+                      text-white
+                      rounded-circle
+                      shadow
+                    "
+                  >
                     <i class="fas fa-users"></i>
                   </div>
                 </div>
               </div>
               <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-warning mr-2"><i class="fas fa-arrow-down"></i> 1.10%</span>
+                <span class="text-warning mr-2"
+                  ><i class="fas fa-arrow-down"></i> 1.10%</span
+                >
                 <span class="text-nowrap">Since yesterday</span>
               </p>
             </div>
@@ -71,17 +107,29 @@
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Performance</h5>
+                  <h5 class="card-title text-uppercase text-muted mb-0">
+                    Performance
+                  </h5>
                   <span class="h2 font-weight-bold mb-0">49,65%</span>
                 </div>
                 <div class="col-auto">
-                  <div class="icon icon-shape bg-info text-white rounded-circle shadow">
+                  <div
+                    class="
+                      icon icon-shape
+                      bg-info
+                      text-white
+                      rounded-circle
+                      shadow
+                    "
+                  >
                     <i class="fas fa-percent"></i>
                   </div>
                 </div>
               </div>
               <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-success mr-2"><i class="fas fa-arrow-up"></i> 12%</span>
+                <span class="text-success mr-2"
+                  ><i class="fas fa-arrow-up"></i> 12%</span
+                >
                 <span class="text-nowrap">Since last month</span>
               </p>
             </div>
@@ -98,7 +146,13 @@
     <div class="col">
       <div class="card shadow">
         <div class="card-header border-0">
-                  <a  [routerLink]="['/feedback-update']" class="btn btn-success btn-lg active justify-content-end" role="button" aria-pressed="true">Add Feedback</a>
+          <a
+            [routerLink]="['/feedback-update']"
+            class="btn btn-success btn-lg active justify-content-end"
+            role="button"
+            aria-pressed="true"
+            >Add Feedback</a
+          >
         </div>
         <div class="table-responsive">
           <table class="table align-items-center table-flush">
@@ -111,39 +165,41 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <th scope="row">
-                  <div class="media align-items-center">
-                    <a href="javascript:void(0)" class="avatar rounded-circle mr-3">
-                      <img alt="Image placeholder" src="../assets/img/theme/bootstrap.jpg">
-                    </a>
-                    <div class="media-body">
-                      <span class="mb-0 text-sm">Argon Design System</span>
-                    </div>
-                  </div>
-                </th>
+              <tr *ngFor="let f of feedback">
                 <td>
-                  $2,500 USD
+                  {{ f.username }}
                 </td>
                 <td>
-                  <span class="badge badge-dot mr-4">
-                    <i class="bg-warning"></i> pending
-                  </span>
+                  {{ f.email }}
+                </td>
+                <td>
+                  {{ f.messages }}
                 </td>
                 <td class="text-right">
                   <div ngbDropdown placement="bottom-right">
-                    <a class="btn btn-sm btn-icon-only text-light"  ngbDropdownToggle>
+                    <a
+                      class="btn btn-sm btn-icon-only text-light"
+                      ngbDropdownToggle
+                    >
                       <i class="fas fa-ellipsis-v"></i>
                     </a>
-                    <div ngbDropdownMenu class=" dropdown-menu-right dropdown-menu-arrow">
-                      <a class="dropdown-item" href="javascript:void(0)">Action</a>
-                      <a class="dropdown-item" href="javascript:void(0)">Another action</a>
-                      <a class="dropdown-item" href="javascript:void(0)">Something else here</a>
+                    <div
+                      ngbDropdownMenu
+                      class="dropdown-menu-right dropdown-menu-arrow"
+                    >
+                      <a class="dropdown-item" href="javascript:void(0)"
+                        >Action</a
+                      >
+                      <a class="dropdown-item" href="javascript:void(0)"
+                        >Another action</a
+                      >
+                      <a class="dropdown-item" href="javascript:void(0)"
+                        >Something else here</a
+                      >
                     </div>
                   </div>
                 </td>
               </tr>
-
             </tbody>
           </table>
         </div>
@@ -160,9 +216,13 @@
                 <a class="page-link" href="javascript:void(0)">1</a>
               </li>
               <li class="page-item">
-                <a class="page-link" href="javascript:void(0)">2 <span class="sr-only">(current)</span></a>
+                <a class="page-link" href="javascript:void(0)"
+                  >2 <span class="sr-only">(current)</span></a
+                >
               </li>
-              <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
+              <li class="page-item">
+                <a class="page-link" href="javascript:void(0)">3</a>
+              </li>
               <li class="page-item">
                 <a class="page-link" href="javascript:void(0)">
                   <i class="fas fa-angle-right"></i>
@@ -175,5 +235,4 @@
       </div>
     </div>
   </div>
-
 </div>
