--- a/src/app/features/presentation/product/product.component.html
+++ b/src/app/features/presentation/product/product.component.html
@@ -191,6 +191,7 @@
                       type="submit"
                       class="btn btn-primary btn-sm"
                       data-cy="entityEditButton"
+                      [routerLink]="['/category', category.id, 'edit']"
                     >
                       <fa-icon icon="pencil-alt"></fa-icon>
                       <span class="d-none d-md-inline">Edit</span>
