--- a/src/app/features/presentation/category/category.component.html
+++ b/src/app/features/presentation/category/category.component.html
@@ -148,7 +148,7 @@
         <div class="card-header border-0">
           <a
              [routerLink]="['/category-new']"
-            class="btn btn-success btn-lg active justify-content-end"
+            class="btn-sm btn-success btn-lg active justify-content-end"
             role="button"
             aria-pressed="true"
             >Add Category</a
