--- a/src/app/features/presentation/product/product.component.html
+++ b/src/app/features/presentation/product/product.component.html
@@ -147,8 +147,8 @@
       <div class="card shadow">
         <div class="card-header border-0">
           <a
-            [routerLink]="['/product-new']"
-            class="btn btn-success btn-lg active justify-content-end"
+            [routerLink]="['/product-update']"
+            class="btn-sm btn-success btn-lg active justify-content-end"
             role="button"
             aria-pressed="true"
             >Add Product</a
