--- a/src/app/features/presentation/product/product.component.html
+++ b/src/app/features/presentation/product/product.component.html
@@ -147,7 +147,7 @@
       <div class="card shadow">
         <div class="card-header border-0">
           <a
-            [routerLink]="['/product-update']"
+            [routerLink]="['/product-new']"
             class="btn-sm btn-success btn-lg active justify-content-end"
             role="button"
             aria-pressed="true"
